creating and loading critters.json and fossils.json into database; added get all fossils and get fossil by id endpoints
